# vui-template

./: README.md  io.github.pedromigueldev.json  meson.build
data/: io.github.pedromigueldev.desktop.in  io.github.pedromigueldev.gschema.xml  io.github.pedromigueldev.metainfo.xml.in  io.github.pedromigueldev.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.vala  meson.build  vui-template.gresource.xml  window.vala
